2025-11-27  Giuliano Pintori <pintori@link.it>

	* [Pipeline]
	Aggiunta analisi delle licenze delle dipendenze alla pipeline CI/CD.
	Integrato script Python per la validazione della compatibilità GPLv3 ed Enterprise.
	Aggiunte licenze mancanti al database di compatibilità: MIT-0, CDDL+GPLv2-CE, Oracle FUTC.

2025-11-27  Giuliano Pintori <pintori@link.it>

	* [Build]
	Risolte vulnerabilità di sicurezza:
	- CVE-2025-41249, CVE-2025-41242 (Spring Framework)
	- CVE-2025-55754, CVE-2025-48989, CVE-2025-55752, CVE-2025-61795 (Tomcat)
	- CVE-2025-59250 (MSSQL JDBC)
	- CVE-2025-11226 (Logback)
	Aggiornato Spring Boot da 3.5.4 a 3.5.8.
	Aggiornato Logback da 1.5.16 a 1.5.19.

2025-08-10  Giuliano Pintori <pintori@link.it>

	* [GpdBatch]
	Issue #20
	Eliminato codice non utilizzato.

2025-08-03  Giuliano Pintori <pintori@link.it>

	* Rilasciata versione 1.1.3

2025-08-03  Giuliano Pintori <pintori@link.it>

	* [GpdBatch]
	Issue #18
	Correzioni e miglioramenti alla gestione delle pendenze.

2025-07-29  Giuliano Pintori <pintori@link.it>

	* Rilasciata versione 1.1.2

2025-07-22  Giuliano Pintori <pintori@link.it>

	* [Build]
	Aggiunti driver JDBC mancanti al runtime per il supporto di tutti i database.

2025-07-16  Giuliano Pintori <pintori@link.it>

	* [Build]
	Risoluzione vulnerabilità CVE-2025-48924.
	Risoluzione segnalazioni SonarCloud.

2025-07-11  Giuliano Pintori <pintori@link.it>

	* Rilasciata versione 1.1.1

2025-07-11  Giuliano Pintori <pintori@link.it>

	* [GpdBatch]
	Issue #16
	Correzioni alla gestione del batch.

2025-04-18  Giuliano Pintori <pintori@link.it>

	* Rilasciata versione 1.1.0

2025-03-24  Giuliano Pintori <pintori@link.it>

	* [GpdBatch]
	Aggiunta gestione del caso di errore per IUV mancante nella pendenza.

2025-03-21  Giuliano Pintori <pintori@link.it>

	* [GpdBatch]
	Corretto errore nella lettura della causale su Oracle.
	Corretto errore nella creazione delle tabelle Spring Batch su PostgreSQL.
	Risolta vulnerabilità nella libreria Tomcat.
