@@ -36,10 +36,10 @@ public class ScheduledJobRunner {
 	private PreventConcurrentJobLauncher preventConcurrentJobLauncher;
 
 	private Job pendenzaSenderJob;
-	
+
 	@Value("${it.govpay.gpd.batch.clusterId:GovPay-ACA-Batch}")
 	private String clusterId;
-	
+
 	public ScheduledJobRunner(JobLauncher jobLauncher, PreventConcurrentJobLauncher preventConcurrentJobLauncher, @Qualifier(Costanti.SEND_PENDENZE_GPD_JOBNAME) Job pendenzaSenderJob) {
 		this.jobLauncher = jobLauncher;
 		this.preventConcurrentJobLauncher = preventConcurrentJobLauncher;
@@ -62,15 +62,35 @@ public class ScheduledJobRunner {
 		JobExecution currentRunningJobExecution = this.preventConcurrentJobLauncher.getCurrentRunningJobExecution(Costanti.SEND_PENDENZE_GPD_JOBNAME);
 
 		if (currentRunningJobExecution != null) {
-			// Estrai il clusterid dell'esecuzione corrente
-            Map<String, JobParameter<?>> runningParams = currentRunningJobExecution.getJobParameters().getParameters();
-            String runningClusterId = runningParams.containsKey(Costanti.GOVPAY_GPD_JOB_PARAMETER_CLUSTER_ID) ? runningParams.get(Costanti.GOVPAY_GPD_JOB_PARAMETER_CLUSTER_ID).getValue().toString() : null;
+			// Verifica se il job è stale (bloccato o in stato anomalo)
+			boolean isStale = this.preventConcurrentJobLauncher.isJobExecutionStale(currentRunningJobExecution);
 
-            if (runningClusterId != null && !runningClusterId.equals(this.clusterId)) {
-                log.info("Il job {} è in esecuzione su un altro nodo ({}). Uscita.", Costanti.SEND_PENDENZE_GPD_JOBNAME, runningClusterId);
-            } else {
-            	log.warn("Il job {} è ancora in esecuzione sul nodo corrente ({}). Uscita.", Costanti.SEND_PENDENZE_GPD_JOBNAME, runningClusterId);
-            }
+			if (isStale) {
+				log.warn("JobExecution {} rilevata come STALE. Procedo con abbandono e riavvio.",
+					currentRunningJobExecution.getId());
+
+				// Abbandona il job stale
+				boolean abandoned = this.preventConcurrentJobLauncher.abandonStaleJobExecution(currentRunningJobExecution);
+
+				if (abandoned) {
+					log.info("Job stale abbandonato con successo. Avvio nuova esecuzione.");
+					// Procedi con l'avvio di una nuova esecuzione
+					runSendPendenzeGpdJob();
+				} else {
+					log.error("Impossibile abbandonare il job stale. Uscita.");
+				}
+				return;
+			}
+
+			// Job in esecuzione normale - estrai il clusterid dell'esecuzione corrente
+			Map<String, JobParameter<?>> runningParams = currentRunningJobExecution.getJobParameters().getParameters();
+			String runningClusterId = runningParams.containsKey(Costanti.GOVPAY_GPD_JOB_PARAMETER_CLUSTER_ID) ? runningParams.get(Costanti.GOVPAY_GPD_JOB_PARAMETER_CLUSTER_ID).getValue().toString() : null;
+
+			if (runningClusterId != null && !runningClusterId.equals(this.clusterId)) {
+				log.info("Il job {} è in esecuzione su un altro nodo ({}). Uscita.", Costanti.SEND_PENDENZE_GPD_JOBNAME, runningClusterId);
+			} else {
+				log.warn("Il job {} è ancora in esecuzione sul nodo corrente ({}). Uscita.", Costanti.SEND_PENDENZE_GPD_JOBNAME, runningClusterId);
+			}
 			return;
 		}
 
