@@ -42,6 +42,10 @@ it.govpay.gpd.batch.dbreader.sogliaTemporaleRicercaPendenze.numeroGiorni=7
 # Cluster ID
 it.govpay.gpd.batch.clusterId=GovPay-ACA-Batch
 
+# Timeout esecuzione job in ore (default: 24 ore)
+# Un job in esecuzione da più di questo tempo viene considerato stale e abbandonato automaticamente
+it.govpay.gpd.batch.max-execution-hours=24
+
 # Policy reinvio per il codice di errore 403
 it.govpay.gpd.batch.policy.reinvio.403.enabled=false
 
